--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,360 @@
-/* место для вашего кода */
+.header {
+    display: grid;
+    grid-template-columns: 1fr min-content 1fr;
+    align-items: center;
+    padding: 16px 8px;
+    background: white;
+    width: 1100px;
+    height: 293px;
+}
+
+.header__menu ul {
+    display: flex;
+    gap: 34px;
+    list-style: circle;
+    margin: 0;
+    padding: 133px 0 139px 50px;
+    font-size: 18px;
+}
+
+.header__links-list-item_no-bullit {
+    list-style: none;
+    -webkit-user-drag: none;
+}
+
+.header__links-list-item {
+    text-decoration: none;
+    color: black;
+    -webkit-user-drag: none;
+}
+
+.header__logo {
+    display: flex;
+    justify-content: center;
+    width: 100px;
+}
+
+.header__logo-image {
+    width: 100%;
+    height: auto;
+    display: block;
+    -webkit-user-drag: none;
+}
+
+.header__links-list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-self: end;
+    max-width: 240px;
+    padding: 95px 50px 100px 0;
+    font-style: normal;
+    font-size: 18px;
+    color: black;
+}
+
+.header__links-list-item {
+    text-decoration: underline;
+    color: black;
+    margin: 0;
+}
+
+.cover {
+    position: relative;
+    max-width: 1100px;
+    min-height: 757px;
+    background-image: url("../images/cover.jpg");
+    background-size: cover;
+    background-position: center;
+    margin: 0 auto;
+    color: white;
+    padding: 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.overlay {
+    position: absolute;
+    inset: 0;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 1;
+}
+
+.cover__title {
+    position: relative;
+    z-index: 2;
+    font-size: 100px;
+    line-height: 1.1;
+    text-transform: uppercase;
+    margin: 0 0 40px;
+    letter-spacing: .3em;
+    padding: 165px 50px 207px;
+}
+
+.aligned-text {
+    display: block;
+}
+
+.aligned-text_left {
+    text-align: left;
+    padding: 0 0 20px;
+}
+
+.aligned-text_center {
+    text-align: center;
+    padding: 0 0 20px;
+}
+
+.aligned-text_right {
+    text-align: right;
+}
+
+
+.cover__description {
+    position: relative;
+    z-index: 2;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.cover__description-text {
+    font-size: 22px;
+    word-spacing: 18px;
+    text-transform: uppercase;
+    max-width: 100%;
+}
+
+.letter-spacing-extended {
+    letter-spacing: 0;
+}
+
+.no-letter-spacing {
+    letter-spacing: 0;
+}
+
+.bet-button {
+    background: transparent;
+    border: 1px solid white;
+    color: white;
+    padding: 12px 32px 11px 31px;
+    text-transform: uppercase;
+    font-size: 22px;
+    cursor: pointer;
+    transition: background 0.3s ease, color 0.3s ease;
+}
+
+.bet-button:hover {
+    background: white;
+    color: black;
+    border-color: white;
+}
+
+.lots {
+    padding: 180px 24px 60px;
+}
+
+.lots__heading {
+    font-size: 40px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+}
+
+.lots__card-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.lots__card-list-item {
+    width: 334px;
+    min-height: 596px;
+}
+
+.card-link {
+    display: block;
+    height: 100%;
+    text-decoration: none;
+    -webkit-user-drag: none;
+}
+
+.card {
+    position: relative;
+    width: 334px;
+    height: 596px;
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    color: white;
+    justify-content: space-between;
+    background-size: cover;
+    background-position: center;
+    z-index: 0;
+}
+
+.card_type_film {
+    background-image: url('../images/card-lot-01.jpg');
+}
+
+.card_type_book {
+    background-image: url('../images/card-lot-02.jpg');
+}
+
+.card_type_picture {
+    background-image: url('../images/card-lot-03.jpg');
+}
+
+.card__title,
+.card__text {
+    position: relative;
+    z-index: 2;
+}
+
+.card__title {
+    font-size: 22px;
+    font-weight: bold;
+    padding: 48px 40px 0px 40px;
+    text-decoration: underline;
+    margin: 0;
+}
+
+.card__text {
+    font-size: 20px;
+    line-height: 1.2;
+    padding: 0 40px 48px 40px;
+}
+
+.lots__look-more-link {
+    display: inline-block;
+    margin: 30px 0 0 64px;
+    font-size: 16px;
+    color: #000;
+    text-decoration: underline;
+    -webkit-user-drag: none;
+}
+
+.about {
+    display: grid;
+    grid-template-columns: 280px 1fr;
+    gap: 40px;
+    align-items: start;
+    padding: 60px 24px 180px;
+}
+
+.about__column {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+}
+
+.about__logo {
+    width: 240px;
+    height: 240px;
+    background-color: #000;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.about__logo-image {
+    width: 148px;
+    height: auto;
+    -webkit-user-drag: none;
+}
+
+.about__title {
+    font-size: 40px;
+    font-weight: 700;
+    flex-direction: column;
+    margin: 98px 402px 100px 0px;
+    color: rgba(0, 0, 0, 1);
+    line-height: 1;
+    text-transform: uppercase;
+}
+
+.about__text {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    font-size: 20px;
+    line-height: 24px;
+    color: rgba(0, 0, 0, 1);
+    margin: 0 24px 0 0;
+}
+
+.footer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 0 50px 60px;
+  background-color: #ffffff;
+  align-items: start;
+  font-size: 18px;
+}
+
+.address {
+  font-style: normal;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+}
+
+.address__link {
+  text-decoration: underline;
+  color: #000;
+  -webkit-user-drag: none;
+}
+
+.address__text {
+  margin: 100px;
+}
+
+.footer__menu {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.footer__menu-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__menu-link {
+  text-decoration: underline;
+  color: #000;
+  -webkit-user-drag: none;
+}
+
+.footer__menu-link_active {
+  text-decoration: none;
+}
+
+.footer__social-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: flex-end;
+  gap: 48px;
+}
+
+.footer__social-link {
+  display: inline-block;
+  -webkit-user-drag: none;
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
+  -webkit-user-drag: none;
+}
