--- a/styles/style.css
+++ b/styles/style.css
@@ -1,297 +1,296 @@
 .header {
-    display: grid;
-    grid-template-columns: 1fr min-content 1fr;
-    align-items: center;
-    width: 1100px;
-    height: 293px;
-    padding: 16px 8px;
-    background: white;
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items: center;
+  width: 1100px;
+  height: 293px;
+  background: white;
 }
 
 .header__menu ul {
-    display: flex;
-    gap: 34px;
-    margin: 0;
-    padding: 133px 0 139px 50px;
-    font-size: 18px;
-    list-style: circle;
+  display: flex;
+  gap: 32px;
+  margin: 0;
+  padding: 133px 0 138px 50px;
+  font-size: 18px;
+  list-style: circle;
 }
 
 .header__links-list-item_no-bullit {
-    list-style: none;
-    -webkit-user-drag: none;
+  list-style: none;
+  -webkit-user-drag: none;
 }
 
 .header__links-list-item {
-    color: black;
-    text-decoration: none;
-    -webkit-user-drag: none;
+  color: black;
+  text-decoration: none;
+  -webkit-user-drag: none;
 }
 
 .header__logo {
-    display: flex;
-    justify-content: center;
-    width: 100px;
+  display: flex;
+  justify-content: center;
+  width: 100px;
 }
 
 .header__logo-image {
-    display: block;
-    width: 100%;
-    height: auto;
-    -webkit-user-drag: none;
+  display: block;
+  height: auto;
+  -webkit-user-drag: none;
 }
 
 .header__links-list {
-    display: flex;
-    flex-direction: column;
-    justify-self: end;
-    align-items: flex-start;
-    max-width: 240px;
-    padding: 95px 50px 100px 0;
-    color: black;
-    font-size: 18px;
-    font-style: normal;
+  display: flex;
+  flex-direction: column;
+  justify-self: end;
+  align-items: flex-start;
+  max-width: 240px;
+  padding: 95px 50px 100px 0;
+  font-size: 18px;
+  font-style: normal;
 }
 
 .header__links-list-item {
-    margin: 0;
-    color: black;
-    text-decoration: underline;
+  margin: 0;
+  color: black;
+  text-decoration: underline;
 }
 
 .cover {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    max-width: 1100px;
-    min-height: 757px;
-    margin: 0 auto;
-    padding: 60px;
-    color: white;
-    background-image: url("../images/cover.jpg");
-    background-position: center;
-    background-size: cover;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 1100px;
+  height: 757px;
+  margin: 0 auto;
+  color: white;
+  background-image: url("../images/cover.jpg");
+  background-position: center;
+  background-size: cover;
+  box-sizing: border-box;
 }
 
 .overlay {
-    position: absolute;
-    inset: 0;
-    z-index: 1;
-    background-color: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  inset: 0;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
 .cover__title {
-    position: relative;
-    z-index: 2;
-    margin: 0 0 40px;
-    padding: 165px 50px 207px;
-    font-size: 100px;
-    line-height: 1.1;
-    letter-spacing: .3em;
-    text-transform: uppercase;
+  position: relative;
+  z-index: 2;
+  margin: 0;
+  padding: 165px 50px 0;
+  font-size: 100px;
+  line-height: 1.1;
+  letter-spacing: 0.3em;
+  text-transform: uppercase;
+  text-align: center;
 }
 
 .aligned-text {
-    display: block;
+  display: block;
 }
 
 .aligned-text_left {
-    padding: 0 0 20px;
-    text-align: left;
+  padding: 0 0 20px;
+  text-align: left;
 }
 
 .aligned-text_center {
-    padding: 0 0 20px;
-    text-align: center;
+  padding: 0 0 20px;
+  text-align: center;
 }
 
 .aligned-text_right {
-    text-align: right;
+  text-align: right;
 }
 
-
 .cover__description {
-    position: relative;
-    z-index: 2;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  position: relative;
+  z-index: 2;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 106px 50px 50px;
 }
 
 .cover__description-text {
-    max-width: 100%;
-    font-size: 22px;
-    text-transform: uppercase;
-    word-spacing: 18px;
+  max-width: 100%;
+  font-size: 22px;
+  text-transform: uppercase;
+  word-spacing: 18px;
 }
 
 .letter-spacing-extended {
-    letter-spacing: 0;
+  letter-spacing: 0;
 }
 
 .no-letter-spacing {
-    letter-spacing: 0;
+  letter-spacing: 0;
 }
 
 .bet-button {
-    border: 1px solid white;
-    padding: 12px 32px 11px 31px;
-    color: white;
-    font-size: 22px;
-    text-transform: uppercase;
-    background: transparent;
-    transition: background 0.3s ease, color 0.3s ease;
-    cursor: pointer;
+  border: 1px solid white;
+  padding: 12px 32px 11px 31px;
+  color: white;
+  font-size: 22px;
+  text-transform: uppercase;
+  background: transparent;
+  transition: background 0.3s ease, color 0.3s ease;
+  cursor: pointer;
 }
 
 .bet-button:hover {
-    color: black;
-    background: white;
+  color: black;
+  background: white;
 }
 
 .lots {
-    padding: 180px 24px 60px;
+  padding: 180px 24px 60px;
 }
 
 .lots__heading {
-    margin-bottom: 20px;
-    font-weight: bold;
-    font-size: 40px;
-    text-transform: uppercase;
+  padding: 0 0 27px 40px;
+  font-weight: bold;
+  font-size: 40px;
+  text-transform: uppercase;
 }
 
 .lots__card-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    margin: 0;
-    padding: 0;
-    list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 .lots__card-list-item {
-    width: 334px;
-    min-height: 596px;
+  width: 334px;
+  min-height: 596px;
 }
 
 .card-link {
-    display: block;
-    height: 100%;
-    text-decoration: none;
-    -webkit-user-drag: none;
+  display: block;
+  height: 100%;
+  text-decoration: none;
+  -webkit-user-drag: none;
 }
 
 .card {
-    position: relative;
-    z-index: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 334px;
-    height: 596px;
-    padding: 0;
-    color: white;
-    background-position: center;
-    background-size: cover;
+  position: relative;
+  z-index: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 334px;
+  height: 596px;
+  padding: 0;
+  color: white;
+  background-position: center;
+  background-size: cover;
 }
 
 .card_type_film {
-    background-image: url('../images/card-lot-01.jpg');
+  background-image: url('../images/card-lot-01.jpg');
 }
 
 .card_type_book {
-    background-image: url('../images/card-lot-02.jpg');
+  background-image: url('../images/card-lot-02.jpg');
 }
 
 .card_type_picture {
-    background-image: url('../images/card-lot-03.jpg');
+  background-image: url('../images/card-lot-03.jpg');
 }
 
 .card__title,
 .card__text {
-    position: relative;
-    z-index: 2;
+  position: relative;
+  z-index: 2;
 }
 
 .card__title {
-    margin: 0;
-    padding: 48px 40px 0px 40px;
-    font-weight: bold;
-    font-size: 22px;
-    text-decoration: underline;
+  margin: 0;
+  padding: 48px 40px 0px 40px;
+  font-weight: bold;
+  font-size: 22px;
+  text-decoration: underline;
 }
 
 .card__text {
-    padding: 0 40px 48px 40px;
-    font-size: 20px;
-    line-height: 1.2;
+  padding: 0 40px 48px 40px;
+  font-size: 20px;
+  line-height: 1.2;
 }
 
 .lots__look-more-link {
-    display: inline-block;
-    margin: 30px 0 0 64px;
-    color: #000;
-    font-size: 16px;
-    text-decoration: underline;
-    -webkit-user-drag: none;
+  display: inline-block;
+  padding: 30px 0 0 40px;
+  color: #000;
+  font-size: 20px;
+  text-decoration: underline;
+  -webkit-user-drag: none;
 }
 
 .about {
-    display: grid;
-    grid-template-columns: 280px 1fr;
-    align-items: start;
-    gap: 40px;
-    padding: 60px 24px 180px;
+  display: grid;
+  grid-template-columns: 280px 1fr;
+  align-items: start;
+  justify-content: center;
+  gap: 32px;
+  padding: 60px 24px 180px;
 }
 
 .about__column {
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
 }
 
 .about__logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 240px;
-    height: 240px;
-    border-radius: 50%;
-    background-color: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  background-color: #000;
 }
 
 .about__logo-image {
-    width: 148px;
-    height: auto;
-    -webkit-user-drag: none;
+  width: 148px;
+  height: auto;
+  -webkit-user-drag: none;
 }
 
 .about__title {
-    flex-direction: column;
-    margin: 98px 402px 100px 0px;
-    color: rgba(0, 0, 0, 1);
-    font-weight: 700;
-    font-size: 40px;
-    line-height: 1;
-    text-transform: uppercase;
+  flex-direction: column;
+  padding: 98px 402px 100px 0px;
+  color: rgba(0, 0, 0, 1);
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1;
+  text-transform: uppercase;
 }
 
 .about__text {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    margin: 0 24px 0 0;
-    color: rgba(0, 0, 0, 1);
-    font-size: 20px;
-    line-height: 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  padding: 0;
+  color: rgba(0, 0, 0, 1);
+  font-size: 20px;
+  line-height: 24px;
 }
 
 .footer {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   align-items: start;
-  padding: 0 50px 60px;
+  padding: 0 50px 82px;
   font-size: 18px;
   background-color: #ffffff;
 }
