--- a/styles/style.css
+++ b/styles/style.css
@@ -7,30 +7,44 @@
   background: white;
 }
 
-.header__menu ul {
+.header__links-list {
   display: flex;
-  gap: 32px;
+  justify-content: space-between;
+  gap: 10px;
   margin: 0;
-  padding: 133px 0 138px 50px;
+  padding: 133px 35px 138px 20px;
   font-size: 18px;
   list-style: circle;
+  list-style-position: outside;
+}
+
+.header__links-list-item {
+  margin-left: 1em;
+  padding-left: 22px;
+  color: black;
+  text-indent: -1em;
 }
 
 .header__links-list-item_no-bullit {
+  margin-left: 0;
+  padding-left: 30px;
+  text-indent: 0;
   list-style: none;
-  -webkit-user-drag: none;
+}
+
+.header__list-item_no-decoration {
+  text-decoration: none;
 }
 
 .header__links-list-item {
   color: black;
-  text-decoration: none;
-  -webkit-user-drag: none;
 }
 
 .header__logo {
   display: flex;
   justify-content: center;
-  width: 100px;
+  width: 145px;
+  height: 105px;
 }
 
 .header__logo-image {
@@ -39,19 +53,20 @@
   -webkit-user-drag: none;
 }
 
-.header__links-list {
+.header__contacts {
   display: flex;
   flex-direction: column;
-  justify-self: end;
-  align-items: flex-start;
-  max-width: 240px;
-  padding: 95px 50px 100px 0;
+  justify-self: center;
+  align-items: start;
+  max-width: 300px;
+  max-height: 222px;
+  padding: 0 0 0 100px;
   font-size: 18px;
   font-style: normal;
+  line-height: 1.3;
 }
 
-.header__links-list-item {
-  margin: 0;
+.header__contacts-item {
   color: black;
   text-decoration: underline;
 }
@@ -92,19 +107,26 @@
 
 .aligned-text {
   display: block;
+  margin: 0;
+  padding: 0;
 }
 
 .aligned-text_left {
-  padding: 0 0 20px;
+  padding: 3px 0 25px 1px;
   text-align: left;
 }
 
 .aligned-text_center {
-  padding: 0 0 20px;
+  display: flex;
+  padding: 0 0 25px 330px;
   text-align: center;
 }
 
 .aligned-text_right {
+  position: absolute;
+  display: flex;
+  margin: 0 0 0 614px;
+  padding: 0;
   text-align: right;
 }
 
@@ -121,7 +143,7 @@
   max-width: 100%;
   font-size: 22px;
   text-transform: uppercase;
-  word-spacing: 18px;
+  word-spacing: 19px;
 }
 
 .letter-spacing-extended {
@@ -196,14 +218,23 @@
 
 .card_type_film {
   background-image: url('../images/card-lot-01.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .card_type_book {
   background-image: url('../images/card-lot-02.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .card_type_picture {
   background-image: url('../images/card-lot-03.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .card__title,
@@ -215,7 +246,6 @@
 .card__title {
   margin: 0;
   padding: 48px 40px 0px 40px;
-  font-weight: bold;
   font-size: 22px;
   text-decoration: underline;
 }
@@ -237,17 +267,13 @@
 
 .about {
   display: grid;
-  grid-template-columns: 280px 1fr;
-  justify-content: center;
-  align-items: start;
-  gap: 32px;
-  padding: 60px 24px 180px;
-}
-
-.about__column {
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 40px;
+  max-width: 1100px;
+  min-height: 775px;
+  margin: 0 auto 60px;
+  padding: 60px 24px 0;
 }
 
 .about__logo {
@@ -257,7 +283,7 @@
   width: 240px;
   height: 240px;
   border-radius: 50%;
-  background-color: #000;
+  background-color: #000000;
 }
 
 .about__logo-image {
@@ -266,24 +292,46 @@
   -webkit-user-drag: none;
 }
 
-.about__title {
+.about__column {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: start;
+  height: 240px;
+  margin: 34px 0 0 14px;
+}
+
+.about__column-text {
+  display: flex;
   flex-direction: column;
-  padding: 98px 402px 100px 0px;
-  color: rgba(0, 0, 0, 1);
+  justify-content: end;
+  align-items: end;
+  width: 100%;
+}
+
+.about__title {
+  align-self: start;
+  margin: 15px 0 100px 0;
+  padding: 0;
+  color: #000000;
   font-weight: 700;
   font-size: 40px;
   line-height: 1;
+  text-align: center;
   text-transform: uppercase;
 }
 
 .about__text {
   display: flex;
   flex-direction: column;
-  gap: 16px;
-  padding: 0;
-  color: rgba(0, 0, 0, 1);
+  gap: 24px;
+  width: 693px;
+  height: 312px;
+  padding: 4px 0 0 0;
+  color: #000000;
   font-size: 20px;
-  line-height: 24px;
+  line-height: 28px;
+  line-height: 1.2;
 }
 
 .footer {
@@ -299,6 +347,7 @@
   display: flex;
   flex-direction: column;
   justify-content: start;
+  gap: 4px;
   font-style: normal;
 }
 
