--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,6 @@
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
   width: 1100px;
-  height: 293px;
   background: white;
 }
 
@@ -18,28 +17,26 @@
   list-style-position: outside;
 }
 
-.header__links-list-item {
-  margin-left: 1em;
-  padding-left: 22px;
-  color: black;
+.header__bullit { 
+  margin-left: 1em; 
+  padding-left: 22px; 
+  color: black; 
   text-indent: -1em;
-}
+  -webkit-user-drag: none; 
+} 
+ 
+.header__no-bullit { 
+  margin-left: 0; 
+  padding-left: 30px; 
+  text-indent: 0; 
+  list-style: none; 
+} 
+ 
+.header__link_active { 
+  text-decoration: none; 
+  -webkit-user-drag: none; 
+} 
 
-.header__links-item {
-  -webkit-user-drag: none;
-}
-
-.header__links-list-item_no-bullit {
-  margin-left: 0;
-  padding-left: 30px;
-  text-indent: 0;
-  list-style: none;
-}
-
-.header__list-item_no-decoration {
-  text-decoration: none;
-  -webkit-user-drag: none;
-}
 
 .header__logo {
   display: flex;
@@ -55,20 +52,19 @@
   -webkit-user-drag: none;
 }
 
-.header__contacts {
+.address__link {
   display: flex;
   flex-direction: column;
   justify-self: center;
   align-items: start;
   max-width: 300px;
-  max-height: 222px;
-  padding: 0 0 0 100px;
+  padding: 0;
   font-size: 18px;
   font-style: normal;
   line-height: 1.3;
 }
 
-.header__contacts-item {
+.address__link-item {
   color: black;
   text-decoration: underline;
   -webkit-user-drag: none;
@@ -81,7 +77,7 @@
   justify-content: space-between;
   box-sizing: border-box;
   width: 1100px;
-  height: 757px;
+  min-height: 757px;
   margin: 0 auto;
   color: white;
   background-image: url("../images/cover.jpg");
@@ -111,25 +107,20 @@
 .aligned-text {
   display: block;
   margin: 0;
-  padding: 0;
+  padding-bottom: 30px;
+  letter-spacing: 30px;
+  line-height: 1;
 }
 
 .aligned-text_left {
-  padding: 3px 0 25px 1px;
   text-align: left;
 }
 
 .aligned-text_center {
-  display: flex;
-  padding: 0 0 25px 330px;
   text-align: center;
 }
 
 .aligned-text_right {
-  position: absolute;
-  display: flex;
-  margin: 0 0 0 614px;
-  padding: 0;
   text-align: right;
 }
 
@@ -212,7 +203,7 @@
   flex-direction: column;
   justify-content: space-between;
   width: 334px;
-  height: 596px;
+  min-height: 596px;
   padding: 0;
   color: white;
   background-position: center;
@@ -221,23 +212,14 @@
 
 .card_type_film {
   background-image: url('../images/card-lot-01.jpg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
 }
 
 .card_type_book {
   background-image: url('../images/card-lot-02.jpg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
 }
 
 .card_type_picture {
   background-image: url('../images/card-lot-03.jpg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
 }
 
 .card__title,
@@ -251,6 +233,7 @@
   padding: 48px 40px 0px 40px;
   font-size: 22px;
   text-decoration: underline;
+  text-transform: uppercase;
 }
 
 .card__text {
@@ -270,11 +253,10 @@
 
 .about {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 0.1fr 1fr;
   align-items: center;
   gap: 40px;
   max-width: 1100px;
-  min-height: 775px;
   margin: 0 auto 60px;
   padding: 60px 24px 0;
 }
@@ -300,8 +282,7 @@
   justify-content: center;
   align-items: center;
   align-self: start;
-  height: 240px;
-  margin: 34px 0 0 14px;
+  margin: 0;
 }
 
 .about__column-text {
@@ -314,7 +295,7 @@
 
 .about__title {
   align-self: start;
-  margin: 15px 0 100px 0;
+  margin: 100px 0 50px 10px;
   padding: 0;
   color: #000000;
   font-weight: 700;
@@ -328,8 +309,7 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
-  width: 693px;
-  height: 312px;
+  width: 100%;
   padding: 4px 0 0 0;
   color: #000000;
   font-size: 20px;
@@ -344,24 +324,6 @@
   padding: 0 50px 82px;
   font-size: 18px;
   background-color: #ffffff;
-}
-
-.address {
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  gap: 4px;
-  font-style: normal;
-}
-
-.address__link {
-  color: #000;
-  text-decoration: underline;
-  -webkit-user-drag: none;
-}
-
-.address__text {
-  margin: 100px;
 }
 
 .footer__menu {
