--- a/styles/style.css
+++ b/styles/style.css
@@ -17,15 +17,16 @@
   list-style-position: outside;
 }
 
-.header__bullit { 
+.header__links-list-item { 
   margin-left: 1em; 
   padding-left: 22px; 
   color: black; 
+  text-underline-offset: 5px;
   text-indent: -1em;
   -webkit-user-drag: none; 
 } 
  
-.header__no-bullit { 
+.header__links-list-item_no-bullit { 
   margin-left: 0; 
   padding-left: 30px; 
   text-indent: 0; 
@@ -37,6 +38,9 @@
   -webkit-user-drag: none; 
 } 
 
+.header__link {
+  -webkit-user-drag: none;
+}
 
 .header__logo {
   display: flex;
@@ -52,22 +56,27 @@
   -webkit-user-drag: none;
 }
 
-.address__link {
+.header__contacts {
   display: flex;
   flex-direction: column;
   justify-self: center;
-  align-items: start;
-  max-width: 300px;
-  padding: 0;
+  padding: 0 50px 0 189px;
   font-size: 18px;
   font-style: normal;
   line-height: 1.3;
 }
 
-.address__link-item {
+.address__link {
   color: black;
   text-decoration: underline;
+  text-underline-offset: 5px;
   -webkit-user-drag: none;
+}
+
+.address__text {
+  color: black;
+  text-decoration: none;
+  white-space: normal;
 }
 
 .cover {
@@ -106,10 +115,8 @@
 
 .aligned-text {
   display: block;
-  margin: 0;
-  padding-bottom: 30px;
-  letter-spacing: 30px;
-  line-height: 1;
+  letter-spacing: 0.3em;
+  line-height: 1.3;
 }
 
 .aligned-text_left {
@@ -130,7 +137,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 106px 50px 50px;
+  padding: 0 50px 50px;
 }
 
 .cover__description-text {
@@ -252,13 +259,12 @@
 }
 
 .about {
-  display: grid;
-  grid-template-columns: 0.1fr 1fr;
-  align-items: center;
+  display: flex;
+  align-items: start;
   gap: 40px;
   max-width: 1100px;
-  margin: 0 auto 60px;
-  padding: 60px 24px 0;
+  margin: 100px 0 60px 70px;
+  padding-bottom: 140px;
 }
 
 .about__logo {
@@ -279,38 +285,38 @@
 
 .about__column {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  align-self: start;
+  justify-content: end;
   margin: 0;
 }
 
 .about__column-text {
   display: flex;
   flex-direction: column;
-  justify-content: end;
-  align-items: end;
+  justify-content: center;
+  align-items: start;
   width: 100%;
 }
 
 .about__title {
   align-self: start;
-  margin: 100px 0 50px 10px;
+  margin: 100px 0 50px 35px;
   padding: 0;
   color: #000000;
   font-weight: 700;
   font-size: 40px;
   line-height: 1;
-  text-align: center;
+  text-align: left;
   text-transform: uppercase;
 }
 
 .about__text {
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin: 55px auto 0 35px;
   gap: 24px;
   width: 100%;
-  padding: 4px 0 0 0;
   color: #000000;
   font-size: 20px;
   line-height: 28px;
@@ -330,6 +336,19 @@
   display: flex;
   justify-content: center;
   align-items: flex-start;
+  text-underline-offset: 5px;
+}
+
+.footer__contacts {
+  display: flex;
+  flex-direction: column;
+  justify-self: start;
+  align-items: start;
+  max-width: 300px;
+  padding: 0;
+  font-size: 18px;
+  font-style: normal;
+  line-height: 1.3;
 }
 
 .footer__menu-list {
