--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,6 @@
 .header__links-list {
   display: flex;
   justify-content: space-between;
-  gap: 10px;
   margin: 0;
   padding: 133px 35px 138px 20px;
   font-size: 18px;
@@ -18,29 +17,25 @@
 }
 
 .header__links-list-item { 
-  margin-left: 1em; 
-  padding-left: 22px; 
-  color: black; 
+  margin: 0 2px 0 1.2em;
+  padding: 0 2px 0 1.2em;
+  color: black;
   text-underline-offset: 5px;
   text-indent: -1em;
-  -webkit-user-drag: none; 
 } 
  
 .header__links-list-item_no-bullit { 
-  margin-left: 0; 
-  padding-left: 30px; 
-  text-indent: 0; 
   list-style: none; 
-} 
- 
-.header__link_active { 
-  text-decoration: none; 
-  -webkit-user-drag: none; 
 } 
 
 .header__link {
+  text-decoration: underline;
   -webkit-user-drag: none;
 }
+
+.header__link_active { 
+  text-decoration: none;
+} 
 
 .header__logo {
   display: flex;
@@ -109,8 +104,8 @@
 
 .aligned-text {
   display: block;
-  letter-spacing: 0.3em;
   line-height: 1.3;
+  letter-spacing: 0.3em;
 }
 
 .aligned-text_left {
@@ -255,10 +250,10 @@
 .about {
   display: flex;
   align-items: start;
-  gap: 40px;
+  gap: 72px;
+  width: 100%;
   max-width: 1100px;
-  margin: 100px 0 60px 70px;
-  padding-bottom: 140px;
+  padding: 100px 0 150px 0;
 }
 
 .about__logo {
@@ -280,7 +275,7 @@
 .about__column {
   display: flex;
   justify-content: end;
-  margin: 0;
+  margin: 0 0 0 72px;
 }
 
 .about__column-text {
@@ -289,11 +284,13 @@
   justify-content: center;
   align-items: start;
   width: 100%;
+  max-width: 693px;
+  margin-bottom: 35px;
 }
 
 .about__title {
   align-self: start;
-  margin: 100px 0 50px 35px;
+  margin: 100px 0 100px;
   padding: 0;
   color: #000000;
   font-weight: 700;
@@ -308,7 +305,6 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  margin: 55px auto 0 35px;
   gap: 24px;
   width: 100%;
   color: #000000;
